name: kusut
version: 0.0.0.0
synopsis: kusut's wwebsite
description: kusut's wwebsite as on the internet
homepage: http://kusut.web.id
license: BSD3
author: kusut
maintainer: kusut
copyright: 2011 kusut
build-type: Simple
cabal-version: >=1.8

executable kusut
  hs-source-dirs: src
  main-is: Kusut.hs
  ghc-options: -rtsopts -threaded -Wall
  build-depends: base >= 4.7.0.0
               , clay >= 0.8.0.1
               , hakyll >= 4.5.3.0
               , pandoc >= 1.12.4.2
