name: kusut
version: 0.0.0.0
synopsis: kusut's HTML
description: kusut's wwebsite as on the internet
homepage: http://kusut.web.id
license: BSD3
author: kusut
maintainer: kusut
copyright: 2011 kusut
build-type: Simple
cabal-version: >=1.8

executable site
  hs-source-dirs: src
  main-is: Site.hs
  ghc-options: -rtsopts -threaded -Wall
  build-depends: base == 4.8.0.0
               , clay == 0.10.1
               , hakyll == 4.6.9.0
               , pandoc == 1.13.2.1
